--- a/Fritid/DAT100Lab1/.classpath
+++ b/Fritid/DAT100Lab1/.classpath
@@ -6,5 +6,6 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="lib" path="/EasyGraphicsTest/easygraphics.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
